Set pw in quotes

--- a/cluster/apps/argocd/argocd/argocd-secrets.sops.yaml
+++ b/cluster/apps/argocd/argocd/argocd-secrets.sops.yaml
@@ -13,17 +13,17 @@ metadata:
         meta.helm.sh/release-name: argocd
 type: Opaque
 data:
-    #ENC[AES256_GCM,data:zHd+nYGrdPMPYl20yTBe2kijjWWCQqk39/DJPLjNpDb1+22KIpnaj/0iNsGlai7/j66hpr2ckzEbsTc=,iv:rLbLyH0J2noEUGIBdXKlsi20DPnFAxT7DVxqYhqA4YE=,tag:CwM/ZmGuDtQaPGBPBKR6Dg==,type:comment]
-    #ENC[AES256_GCM,data:hSqC7ar/YP4QuRgSyYTWeZ7VnzT1g+IlC4PyyJ3BhnE6r7v3ERj/nm4ErF6pDcSoLxq0vls7UzcdjfmxZM31ImJPHEGdaz650411SNs3JQ==,iv:vosxHOYDJaSKVZ7RsfWty1Vf7wACaV3DuIVC5hIPC3s=,tag:alJkITpXVFSpllzpCbToDw==,type:comment]
-    #ENC[AES256_GCM,data:3AyJfBDKYEGG,iv:PjAAFmR/IQGuQnSg23FZQZPmeBo2LrXJjGovmZXprP8=,tag:c9huTllsoc7l6USFgAZB1g==,type:comment]
-    #ENC[AES256_GCM,data:Atw8zF9pjlJo,iv:D1AzOCIVaXdIjR4vtaX/MDl96Y0kHZ1A5L0Dh3h0oMY=,tag:sADwiPEymT4eUlTgoocMnw==,type:comment]
-    #ENC[AES256_GCM,data:ysZK/O7DOy+k7L0NcRD2ilF/bY7YIGGPEJI0Hr9IDy83wPKfx8tPRaraFiHTNR3PwRDCtVSIPs+ChHyi+kEnhjS+SNmiWPgARw==,iv:5v9Lt2RLNMBeFyQAy3hqxrsX0RXwuJBYaDxhHf/5Xes=,tag:AHv/KVA7O1WXz4i7rEAFbA==,type:comment]
-    #ENC[AES256_GCM,data:7m/Ji7syU65hwU7LrAyABjN5m8gYhmHpJ4X7mAfTyPN1VFLq4AmNORCRqFPKo1H1N8cyXDPmH/yAGaXWJEso8GrGk+E=,iv:AOQ/VhhcZ5YRwkusGxrlDFlbJmAVZVS9SAun3ts8gSI=,tag:l4S7wQ0eV8qfOpi19QWopQ==,type:comment]
-    #ENC[AES256_GCM,data:BS5lpXjs61MfSkkqZZfaoAQ+KCcV4OWR6wjAjtQ2O+XAsAAzToU0nMxkVgK5u5Tm78H+YsCXdpucGESCUZCt+Pc88X+lsOv3kqSqxH0Ae8QqyIhkVpCSjr615963SAiUgP0AVUdskQ7z3xnb+MavwGI=,iv:9NoSIVgupm0TShrOlJ0D+3RnnBft63PAWFQ6JJAEFUk=,tag:3jFeun3ihoTyqvqGoqxT6A==,type:comment]
-    admin.password: ENC[AES256_GCM,data:kdPZcZBgNUOUvZ1tlUOIUYie/G643fDqSoFf3my76sKiyorov99Ls9+aefrhChi4mt/JNXMEc9h86DA0,iv:pz2mu8OYhT7mDTbJzNdfUqNaKbwY77vPlp167vhvSCw=,tag:mzzCS0qdWP7+1CozPZgp3Q==,type:str]
-    #ENC[AES256_GCM,data:86te3lGddb7/LGRrLQphBoJmrFCO1NWlBR8voME26O6zXupCz0V0QIKsAPNKlSDAjmjYi8e3vP4b0Bp+sg9N,iv:glFSdChy5QYDxDOUgTm0UjPkk65cZRX0AzWpBBiNF1o=,tag:l0nUtv9l6F4VOu0g8w6IDg==,type:comment]
-    #ENC[AES256_GCM,data:ZETq15ntCKSYrgs1TLG1V+sy/RlhK2dLVWhXrA==,iv:2GWBhhuxlrAbaK6SfXI4d7O9nZWXTOyuDbfjwuQJc34=,tag:sCzSmy28KgYMJ6uzGwFeHg==,type:comment]
-    #ENC[AES256_GCM,data:ZDLkGSVJBXKZZ9kuIGDW28rd,iv:7RinVhK9CVr8nhT4QEukPJNbUnsbctppGf+6s8O1u/0=,tag:N69p4GBXuflZ17Cd/LndFg==,type:comment]
+    #ENC[AES256_GCM,data:7NVCFnAh97YSZKZn632xX379sfjmA2C3MZVHVW1xnoGik9K9JrZNdz9k8crh6FT8Y3fpw1BhyWRVFqo=,iv:dRk1cZX/zdmCf+S784ZDaz4qwjSdcWaEGb/M9qChruE=,tag:oqXqQbEIJayDBoIgVmHbdQ==,type:comment]
+    #ENC[AES256_GCM,data:7AnVmqOexCgPwnRxJmQOVKr6gdG7oQb2fcPZPDKtOpJPLRt/79btMurK8aYKSYN7ubOSxqNTYhWP3rYFIeS0Ptu0dCsiU+l2K/5gowQtLA==,iv:FLf/Xqx368oeTarA4OgeYyn0RA70mvXqKJB+L0qR/fY=,tag:L/VkWeBLDInGfCpfcMCYcA==,type:comment]
+    #ENC[AES256_GCM,data:to+G/fSz3wBB,iv:WjhJfFerbfMndvLBQB8bq1uptJZr145wvusOqfMeJmE=,tag:hoY6djEEnnFV4iyARjEG4A==,type:comment]
+    #ENC[AES256_GCM,data:P78MP56g267S,iv:369vbnNqsmVFd3RCURDXAnJu8V9U2U3EgjzNgQQa1lI=,tag:q6xoIRCIKtcXLktChHFO3A==,type:comment]
+    #ENC[AES256_GCM,data:rrA9TVMrkQLRiRge+FSjcUum5hwPKRLQNDz14eSgmTjXx3+v24RLq8zydDXx836HwmJ44EtNohfgrK2F05vRl2eAXmF28cqXLQ==,iv:4Hh9McQ9MEWYbYiTDAerTJuetjVmWFpEYMSkV+1h2+0=,tag:UScCWen/XkdJ7XCV30oEoA==,type:comment]
+    #ENC[AES256_GCM,data:6GBqcDPkkwnx8FkWmdzIKCLDF3HYoYNrw+LqMxCgcMtE3BUnObuRUFPayVfXHAvxSdK83DYmiESm3mT1nx3a8pL2hsk=,iv:cKc4QK7R3HklN7nkeJoMAg9TcrO2wV9Ju2GY+BURqJE=,tag:fe6qS94FuZPv1V7CE7O0Bw==,type:comment]
+    #ENC[AES256_GCM,data:pF8rh3HmyVBy9qLFRrRCsp7Wp31IB96esHpn2Rk9bpWbrwss252+SJD/4uPg4dteBvI+2INECJ4JEy0uyH5KLwCIgAR2KmXN5MlTaz6BUrPjfGSzrnjj+phA4WBcLnuI3LOH23jHYpuuzpWaAkptNQ4=,iv:L9FYhhK73vStaq7DD8a0E/+TqVbzeafjFeTapZre36M=,tag:QcXFGVkKJa017S5aqWIbOg==,type:comment]
+    admin.password: ENC[AES256_GCM,data:PCfP4LpYWYjnJry7yl5ZLtecdiXVBfwNQJH2Yrpq22gdRiD7SpRtJKcZnIOMsaLydHsYtTpnWy7hyMxp,iv:on48okY7hDGwjmzRHo+vpBP8oXr/3Su8xTmoIDE0fB8=,tag:FN/SK2VS5QiGn3TqWwItWQ==,type:str]
+    #ENC[AES256_GCM,data:jmkHwvDEZa4VxUMglmWp3bYZ+j1ktmCv8Iqya35W/JsJs97BsecGPMVCEZnHo0YCiEmuU4WvilDdmHxG9cJc,iv:4qeft2Z/qFcHpIr1OiPPNODdegiPgPGxXY87DFh4B6g=,tag:R669ATsM0OdTfDWc/veC+g==,type:comment]
+    #ENC[AES256_GCM,data:lQJWbYbiWiWmJg9INDa2plPXn5H+iQ+DacSv5w==,iv:77WFWBfFdjDfMhvrt8ioJBg8quk0PHPND7UlHqELGvQ=,tag:PSp/Ox/uav3s49tRFDOM6A==,type:comment]
+    #ENC[AES256_GCM,data:b48gBzloeQYoLsD3qMz6QH5c,iv:lZ+hEFAsEQB84KQQ/Mafz18AZMU2T03Z6ukyRc78wQE=,tag:qjRLnZDls8miB16dXRc6vg==,type:comment]
 sops:
     kms: []
     gcp_kms: []
@@ -33,14 +33,14 @@ sops:
         - recipient: age1hra9lsurxkx96y9vgckl38ct3x4nkq655nnmfpe2xly93kqypqps0yhwmc
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBoSjJRNEpsYi81SHBsQ3Yr
-            ZU5LV3Z6ekRrbTRCMmNsWlJTZ2lSNUVSL0g4CnJFaXNTalJNUldXVHNWZnZ0ditr
-            bm9TRHRoMFBOOEdkVDg3cVZuajdEK00KLS0tIGt3VFBhM2w5ZEEzRHFxL2p4R0xh
-            T3FCeUVPUmpwaXBVM25sUXNxUzNjYmMK9UUa+dFh9erXMF9iLK/lOdDS/dsfkLBB
-            O9USPHgdFeq1euc8ksNuGjQBvU8vcNm9eGbWsP/5AnOzfRwXxdzFrg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBTdWhWUlBwV2xDYndtQ2pv
+            RWEzUUc2NDhQc0FiUE45alFNbStIQUdkK1JvCmZhdkVJVVZFYVovbDdkNktOcjhl
+            SmdhRVNOQ1JkV2RsOVM0ZW5hSTI5cTAKLS0tIEFwZXdxdm1EOThjVnIwQk96SDJt
+            dTdkMFZOdHVRaDJTYXp4SWN5MXJxNzgKRWh5B163pn+SWInxdyT4oHcQ27bzXOx5
+            8vgMVic8f7TU0bJmvFkDfkQrXS/5JDsh7rQZiS7BneZODfd49OSLvw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-08-20T11:47:17Z"
-    mac: ENC[AES256_GCM,data:WeEscre3jTqFifBKKoaCkTGNIjDIWPM/0sbiz/Rmprb+xeHfNUusEM1WD68ndTTTONZC3km7zSNxQO1WKMtO06TD75rZ96vMMKFEqXeUXqphgelTBHqcOg0lHKpx6N+bLnC8hznhZe/8RtFdrc0yrVGAd9jmyvKlynVSLbPe+EU=,iv:D+OJDMkqf3eH3F+q0FIsj/XDzupc9f/k5foDgWv9/9I=,tag:Y+ucUz6s+Oa1H0i9YmGQxg==,type:str]
+    lastmodified: "2022-08-20T11:52:11Z"
+    mac: ENC[AES256_GCM,data:3nAZxg9GNTd9bSV929i2GlR5zFIFLCyCWNzhynyde0VSB0xkGwQqiD2XI3vDz+SG0ePtMg9KuKsu8KxOE1SnNvneOQTq5PExIfYAGtE9HpmS7tLZJOpmez/1fLhlwqK05RqaLZBetHjHFcnLyOWEQ3HbT6o9ziUnjZGNdWeKS7w=,iv:r7iR33cEv391nTCrbTdJArKdwLQnEIbkWkJhp6GpMXU=,tag:63B4hgP7xVXNjtzPNfIZ4w==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.1
@@ -53,10 +53,10 @@ metadata:
     labels:
         argocd.argoproj.io/secret-type: repo-creds
 stringData:
-    url: ENC[AES256_GCM,data:8T0Clk8GUa6bHohpg5kGzALtVIdNLQHLcg==,iv:wDC8HTnY+83ouiFAMM8V13xBnij+O5y6OYkyEMQV++0=,tag:I0yQwrukaxmdDmNBNe3RsA==,type:str]
-    type: ENC[AES256_GCM,data:Z8wkiA==,iv:J6LbT4GcrjU4sUMismc7/yVpRJVyPswHBEByUBwYfwk=,tag:5eDZlfV71mb/wyK31iKDcw==,type:str]
-    password: ENC[AES256_GCM,data:Sux9OAekYb6vIHrGXk22jg==,iv:4YkMZOGPLNttf/KKsUzHFWznqqazAdUZWhm9Z0IPKWc=,tag:sDlsYBShihAwVPbF0A9jDA==,type:str]
-    username: ENC[AES256_GCM,data:YAXiJKBn,iv:Ceb0E+pxLnercCf4y/CbtxAT1VWriQ0A0QaPffEqBoI=,tag:F6DNwiaZnFodSzpBKVbHGA==,type:str]
+    url: ENC[AES256_GCM,data:a8zEeCTmpNCrMev2YT++aeg/kLUydS4uDA==,iv:Jxigkv9bGXAr+px4mKB53IuJDHgBtf4/zEjZCR6NmaM=,tag:dj/L0ql/AFFilZ6EVRrDNg==,type:str]
+    type: ENC[AES256_GCM,data:s8D3BQ==,iv:Dc9wU3z3pxTGcpGnRiPxaHP4L2KWarRaWZS2uOfD+G4=,tag:B+1WkZHE1g5WxVLGOqOFBQ==,type:str]
+    password: ENC[AES256_GCM,data:vSbckhGjNbmMK976r/qWFA==,iv:YRDeXwOUoHswsdv8psaX+fqDOGsV87bGbu96uzbJEKY=,tag:et0QX2hbJ9JSVHfS1A8xpw==,type:str]
+    username: ENC[AES256_GCM,data:DcDTbULy,iv:yFnjUflciHl/m3da+hYK10VoV7JF69VqBYc20lDKz+E=,tag:zNLH9Qy8gj2CRzb0LN9fuw==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -66,14 +66,14 @@ sops:
         - recipient: age1hra9lsurxkx96y9vgckl38ct3x4nkq655nnmfpe2xly93kqypqps0yhwmc
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBoSjJRNEpsYi81SHBsQ3Yr
-            ZU5LV3Z6ekRrbTRCMmNsWlJTZ2lSNUVSL0g4CnJFaXNTalJNUldXVHNWZnZ0ditr
-            bm9TRHRoMFBOOEdkVDg3cVZuajdEK00KLS0tIGt3VFBhM2w5ZEEzRHFxL2p4R0xh
-            T3FCeUVPUmpwaXBVM25sUXNxUzNjYmMK9UUa+dFh9erXMF9iLK/lOdDS/dsfkLBB
-            O9USPHgdFeq1euc8ksNuGjQBvU8vcNm9eGbWsP/5AnOzfRwXxdzFrg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBTdWhWUlBwV2xDYndtQ2pv
+            RWEzUUc2NDhQc0FiUE45alFNbStIQUdkK1JvCmZhdkVJVVZFYVovbDdkNktOcjhl
+            SmdhRVNOQ1JkV2RsOVM0ZW5hSTI5cTAKLS0tIEFwZXdxdm1EOThjVnIwQk96SDJt
+            dTdkMFZOdHVRaDJTYXp4SWN5MXJxNzgKRWh5B163pn+SWInxdyT4oHcQ27bzXOx5
+            8vgMVic8f7TU0bJmvFkDfkQrXS/5JDsh7rQZiS7BneZODfd49OSLvw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-08-20T11:47:17Z"
-    mac: ENC[AES256_GCM,data:WeEscre3jTqFifBKKoaCkTGNIjDIWPM/0sbiz/Rmprb+xeHfNUusEM1WD68ndTTTONZC3km7zSNxQO1WKMtO06TD75rZ96vMMKFEqXeUXqphgelTBHqcOg0lHKpx6N+bLnC8hznhZe/8RtFdrc0yrVGAd9jmyvKlynVSLbPe+EU=,iv:D+OJDMkqf3eH3F+q0FIsj/XDzupc9f/k5foDgWv9/9I=,tag:Y+ucUz6s+Oa1H0i9YmGQxg==,type:str]
+    lastmodified: "2022-08-20T11:52:11Z"
+    mac: ENC[AES256_GCM,data:3nAZxg9GNTd9bSV929i2GlR5zFIFLCyCWNzhynyde0VSB0xkGwQqiD2XI3vDz+SG0ePtMg9KuKsu8KxOE1SnNvneOQTq5PExIfYAGtE9HpmS7tLZJOpmez/1fLhlwqK05RqaLZBetHjHFcnLyOWEQ3HbT6o9ziUnjZGNdWeKS7w=,iv:r7iR33cEv391nTCrbTdJArKdwLQnEIbkWkJhp6GpMXU=,tag:63B4hgP7xVXNjtzPNfIZ4w==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.1
