Use stringData for secret

--- a/cluster/apps/argocd/argocd/argocd-secrets.sops.yaml
+++ b/cluster/apps/argocd/argocd/argocd-secrets.sops.yaml
@@ -12,18 +12,18 @@ metadata:
         meta.helm.sh/release-namespace: argocd
         meta.helm.sh/release-name: argocd
 type: Opaque
-data:
-    #ENC[AES256_GCM,data:7NVCFnAh97YSZKZn632xX379sfjmA2C3MZVHVW1xnoGik9K9JrZNdz9k8crh6FT8Y3fpw1BhyWRVFqo=,iv:dRk1cZX/zdmCf+S784ZDaz4qwjSdcWaEGb/M9qChruE=,tag:oqXqQbEIJayDBoIgVmHbdQ==,type:comment]
-    #ENC[AES256_GCM,data:7AnVmqOexCgPwnRxJmQOVKr6gdG7oQb2fcPZPDKtOpJPLRt/79btMurK8aYKSYN7ubOSxqNTYhWP3rYFIeS0Ptu0dCsiU+l2K/5gowQtLA==,iv:FLf/Xqx368oeTarA4OgeYyn0RA70mvXqKJB+L0qR/fY=,tag:L/VkWeBLDInGfCpfcMCYcA==,type:comment]
-    #ENC[AES256_GCM,data:to+G/fSz3wBB,iv:WjhJfFerbfMndvLBQB8bq1uptJZr145wvusOqfMeJmE=,tag:hoY6djEEnnFV4iyARjEG4A==,type:comment]
-    #ENC[AES256_GCM,data:P78MP56g267S,iv:369vbnNqsmVFd3RCURDXAnJu8V9U2U3EgjzNgQQa1lI=,tag:q6xoIRCIKtcXLktChHFO3A==,type:comment]
-    #ENC[AES256_GCM,data:rrA9TVMrkQLRiRge+FSjcUum5hwPKRLQNDz14eSgmTjXx3+v24RLq8zydDXx836HwmJ44EtNohfgrK2F05vRl2eAXmF28cqXLQ==,iv:4Hh9McQ9MEWYbYiTDAerTJuetjVmWFpEYMSkV+1h2+0=,tag:UScCWen/XkdJ7XCV30oEoA==,type:comment]
-    #ENC[AES256_GCM,data:6GBqcDPkkwnx8FkWmdzIKCLDF3HYoYNrw+LqMxCgcMtE3BUnObuRUFPayVfXHAvxSdK83DYmiESm3mT1nx3a8pL2hsk=,iv:cKc4QK7R3HklN7nkeJoMAg9TcrO2wV9Ju2GY+BURqJE=,tag:fe6qS94FuZPv1V7CE7O0Bw==,type:comment]
-    #ENC[AES256_GCM,data:pF8rh3HmyVBy9qLFRrRCsp7Wp31IB96esHpn2Rk9bpWbrwss252+SJD/4uPg4dteBvI+2INECJ4JEy0uyH5KLwCIgAR2KmXN5MlTaz6BUrPjfGSzrnjj+phA4WBcLnuI3LOH23jHYpuuzpWaAkptNQ4=,iv:L9FYhhK73vStaq7DD8a0E/+TqVbzeafjFeTapZre36M=,tag:QcXFGVkKJa017S5aqWIbOg==,type:comment]
-    admin.password: ENC[AES256_GCM,data:PCfP4LpYWYjnJry7yl5ZLtecdiXVBfwNQJH2Yrpq22gdRiD7SpRtJKcZnIOMsaLydHsYtTpnWy7hyMxp,iv:on48okY7hDGwjmzRHo+vpBP8oXr/3Su8xTmoIDE0fB8=,tag:FN/SK2VS5QiGn3TqWwItWQ==,type:str]
-    #ENC[AES256_GCM,data:jmkHwvDEZa4VxUMglmWp3bYZ+j1ktmCv8Iqya35W/JsJs97BsecGPMVCEZnHo0YCiEmuU4WvilDdmHxG9cJc,iv:4qeft2Z/qFcHpIr1OiPPNODdegiPgPGxXY87DFh4B6g=,tag:R669ATsM0OdTfDWc/veC+g==,type:comment]
-    #ENC[AES256_GCM,data:lQJWbYbiWiWmJg9INDa2plPXn5H+iQ+DacSv5w==,iv:77WFWBfFdjDfMhvrt8ioJBg8quk0PHPND7UlHqELGvQ=,tag:PSp/Ox/uav3s49tRFDOM6A==,type:comment]
-    #ENC[AES256_GCM,data:b48gBzloeQYoLsD3qMz6QH5c,iv:lZ+hEFAsEQB84KQQ/Mafz18AZMU2T03Z6ukyRc78wQE=,tag:qjRLnZDls8miB16dXRc6vg==,type:comment]
+stringData:
+    #ENC[AES256_GCM,data:SkSAZ1Tnw7jshD4fu8DWvmehw/6rfYfza7Pt5Spjy0JLT5jBxJUJqm86lE4jYgwITMErW8Eub9FmITY=,iv:7o0+cq+TYHBB9QBAkwCTyTDNAglutny6Hf4Mhbv/qZc=,tag:GsP7UhsNnx83ViyFLgIYsA==,type:comment]
+    #ENC[AES256_GCM,data:5vntO75ZxZYhgNs3wQINLhscVy7j+2wrEFCnMnjL/b5L3smoLLsnY8s/bgiChWST9yTwXTvPrDADcMeTeU4srcSHthnIXgPwNvdb2hOUng==,iv:Di0D1lt0tc8Jur+1ax0j51Tx3BNsmTs1LlgAyzSSbAY=,tag:/OaFgBtk4ODLwcAOpDvpOg==,type:comment]
+    #ENC[AES256_GCM,data:M50BVRM/gko6,iv:7w+YcD4kl1+i1HAiE25uJeJgp7lcExkteH9iYDkYEdg=,tag:g7BIEGFB2bY2dE5LbHNCjw==,type:comment]
+    #ENC[AES256_GCM,data:vWTBYgT3a9xv,iv:kiVK6OMcv1oq8tUhjenkRoY3x28rqWILrPoCzhIHgUs=,tag:Bwj3E4rbRnkaJCXVNHgc5w==,type:comment]
+    #ENC[AES256_GCM,data:UgPVi9WxKr1GsIVjUsB4NQQjT5i1Ks/VHT7W0Iwt4d0c938Sljhs1JMQtEzDnR6bMJlCwDhjILxU29ZjX+/dBybmKGtfPDEWTg==,iv:5drGMt1H9Z1GiO9X4WE/rmKBkMBOGfYRAQ2SuYCFa8I=,tag:GSyQiGI7BklGfVLzAa9TDg==,type:comment]
+    #ENC[AES256_GCM,data:67rQ6PHAuHYkXNJg03lzhjQJwLtrmrdzyr+U6lCZVWy1zDfavQx1grWkjzcsXar4dbBq5Yp32F7pccU9CD0PyK6yAdo=,iv:P0bVHMaiOOclcJ3JyNVCDDMB0D4smwonpHb7ckUxCjY=,tag:n2CVf5YDqMlcnHx5qLF0+Q==,type:comment]
+    #ENC[AES256_GCM,data:aH9BUEfMEgy92k/rSM+OgKBlulIm7NPGPAwuVx+UZWpQJDkj/0Yz5yX/kb4mRfbs56aDpCCunaCxcPQI07g6LErSb6YyQy2dJcXxHbLnCW9h9uD99TFE8hchVkeiKaAsSwesErMtIvr5lrfdWfbr114=,iv:2bD8a4mtqACS99UO2f2Xvkn9VXX7hYYrEkK0IFAKj/I=,tag:TC3ai3kQYTdOFP11qFR/gg==,type:comment]
+    admin.password: ENC[AES256_GCM,data:+w4DXnhq4haKwrIhqpEnynDfRzSGQmtvRZ321RSExSDPwM63ZTsEHN3WvuknCvUsoddspzr91tVtmtDi,iv:RkNH9Di9LDrLrL2rFh5ALAFdQRz+7xyn/EdkOBYOdak=,tag:yPyKVNIvrSyw2OLfRjTJ5A==,type:str]
+    #ENC[AES256_GCM,data:Ouav5zn57bGYCrBtkB82PRRZjmecqEVc7Ry8Erv31n+598NSE+W9B3nnMIlDgwPVh8dsIV23j1ZiqJYWf2ck,iv:1EEbUaUmSc5wT/ebdjYuddia/ULPBjCseyiOWD7aYMU=,tag:SSWE3AqUZ0/XbMsuofvnug==,type:comment]
+    #ENC[AES256_GCM,data:i0A95urrOPVTiXWyVhNHkFG7R/sf1d74tpn/nw==,iv:XStAnk3+yU0QLtRs2fOX+exH04r7ykKRBoJrf1PqY/U=,tag:4Zf1hwZTW+Ym6q649Ayd2Q==,type:comment]
+    #ENC[AES256_GCM,data:SeApVWD4Xv1sVY4wqbevft3I,iv:Rs4k+XhsYd1eCTOz2HqLQSbqES9EGzU5XBOaujZ11bQ=,tag:k3FXvAhuTzrD7F+JQLE3xg==,type:comment]
 sops:
     kms: []
     gcp_kms: []
@@ -33,14 +33,14 @@ sops:
         - recipient: age1hra9lsurxkx96y9vgckl38ct3x4nkq655nnmfpe2xly93kqypqps0yhwmc
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBTdWhWUlBwV2xDYndtQ2pv
-            RWEzUUc2NDhQc0FiUE45alFNbStIQUdkK1JvCmZhdkVJVVZFYVovbDdkNktOcjhl
-            SmdhRVNOQ1JkV2RsOVM0ZW5hSTI5cTAKLS0tIEFwZXdxdm1EOThjVnIwQk96SDJt
-            dTdkMFZOdHVRaDJTYXp4SWN5MXJxNzgKRWh5B163pn+SWInxdyT4oHcQ27bzXOx5
-            8vgMVic8f7TU0bJmvFkDfkQrXS/5JDsh7rQZiS7BneZODfd49OSLvw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBUUlQwZnVJVGQwUTBaRGta
+            UnFtYXp5enB6MmpZRUZhV0FIV1lReG9HSUJRCnBFTmZhYzlRRE9GVFQrYXphWW10
+            Vzg2KzlMSG1sTFI4Zk9pMDB6YUg1TTgKLS0tIDNOREdFTjRRQ2RqNnBpZXozK0Ni
+            Mkl5d1A1WmQwSWJSVDdDYk1QSnVzSHMKICNcgx5lWJK/dk6PA2oNLIKxb1mkxfEV
+            Cjx9x9RciMsBZfhlMa9jGZF/Lp1jZneG/WFCVX3KwgZlnltHTk0s4A==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-08-20T11:52:11Z"
-    mac: ENC[AES256_GCM,data:3nAZxg9GNTd9bSV929i2GlR5zFIFLCyCWNzhynyde0VSB0xkGwQqiD2XI3vDz+SG0ePtMg9KuKsu8KxOE1SnNvneOQTq5PExIfYAGtE9HpmS7tLZJOpmez/1fLhlwqK05RqaLZBetHjHFcnLyOWEQ3HbT6o9ziUnjZGNdWeKS7w=,iv:r7iR33cEv391nTCrbTdJArKdwLQnEIbkWkJhp6GpMXU=,tag:63B4hgP7xVXNjtzPNfIZ4w==,type:str]
+    lastmodified: "2022-08-20T11:57:59Z"
+    mac: ENC[AES256_GCM,data:4uq4Szvi6nHTZm2Dl8+T7kDwstmoLOk2GxlXn/S5OozYpDBWP4PnKVXXjAEVD7t0To9PgJn3sUfNJbd5dWnm05Wa23GAqZdQnRj8t1yms0IVGwib8N1bz9IC1YtbgalEU55+3iUfgP0OhGN1/cULQAWkmKTaXIMuWbUa0JoIuJg=,iv:qe6odPwdKcPFIDf42dTjXDjsvgSAiIyP/nc8Zs20+dg=,tag:GyCdl64LoTpI9vGYK4AAxw==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.1
@@ -53,10 +53,10 @@ metadata:
     labels:
         argocd.argoproj.io/secret-type: repo-creds
 stringData:
-    url: ENC[AES256_GCM,data:a8zEeCTmpNCrMev2YT++aeg/kLUydS4uDA==,iv:Jxigkv9bGXAr+px4mKB53IuJDHgBtf4/zEjZCR6NmaM=,tag:dj/L0ql/AFFilZ6EVRrDNg==,type:str]
-    type: ENC[AES256_GCM,data:s8D3BQ==,iv:Dc9wU3z3pxTGcpGnRiPxaHP4L2KWarRaWZS2uOfD+G4=,tag:B+1WkZHE1g5WxVLGOqOFBQ==,type:str]
-    password: ENC[AES256_GCM,data:vSbckhGjNbmMK976r/qWFA==,iv:YRDeXwOUoHswsdv8psaX+fqDOGsV87bGbu96uzbJEKY=,tag:et0QX2hbJ9JSVHfS1A8xpw==,type:str]
-    username: ENC[AES256_GCM,data:DcDTbULy,iv:yFnjUflciHl/m3da+hYK10VoV7JF69VqBYc20lDKz+E=,tag:zNLH9Qy8gj2CRzb0LN9fuw==,type:str]
+    url: ENC[AES256_GCM,data:ScwnMCsHEQ7LBPFSIUgVsChRYBbZ0zFHIA==,iv:A2jKoWVtO3y2O6gz3l5HNNKUVAAKFyA37kudYdwefqo=,tag:popeJS7ZTgi/szWJmt+5Jw==,type:str]
+    type: ENC[AES256_GCM,data:8YXqxg==,iv:YmAu1gE9Zg//wa2VPmWiMdCZVqhTFlZpbj0ja0vfq3M=,tag:JZWRfKhb+VTSIcek442aTg==,type:str]
+    password: ENC[AES256_GCM,data:e0AWLz/ntaXshFSUBSgdrQ==,iv:h2GA0UWHafNu1FdLU8j6gJAMG1FqPb7oMYbsKAoh+mY=,tag:cD06Umdu6N4xhB9D8ka16w==,type:str]
+    username: ENC[AES256_GCM,data:+/a7rKQw,iv:p/3OmMnrhy47YJnOzqbvNoYODVvlbknU/VL5Tr3IHxE=,tag:YGUq3RGl6JKWm/POHLV0zA==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -66,14 +66,14 @@ sops:
         - recipient: age1hra9lsurxkx96y9vgckl38ct3x4nkq655nnmfpe2xly93kqypqps0yhwmc
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBTdWhWUlBwV2xDYndtQ2pv
-            RWEzUUc2NDhQc0FiUE45alFNbStIQUdkK1JvCmZhdkVJVVZFYVovbDdkNktOcjhl
-            SmdhRVNOQ1JkV2RsOVM0ZW5hSTI5cTAKLS0tIEFwZXdxdm1EOThjVnIwQk96SDJt
-            dTdkMFZOdHVRaDJTYXp4SWN5MXJxNzgKRWh5B163pn+SWInxdyT4oHcQ27bzXOx5
-            8vgMVic8f7TU0bJmvFkDfkQrXS/5JDsh7rQZiS7BneZODfd49OSLvw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBUUlQwZnVJVGQwUTBaRGta
+            UnFtYXp5enB6MmpZRUZhV0FIV1lReG9HSUJRCnBFTmZhYzlRRE9GVFQrYXphWW10
+            Vzg2KzlMSG1sTFI4Zk9pMDB6YUg1TTgKLS0tIDNOREdFTjRRQ2RqNnBpZXozK0Ni
+            Mkl5d1A1WmQwSWJSVDdDYk1QSnVzSHMKICNcgx5lWJK/dk6PA2oNLIKxb1mkxfEV
+            Cjx9x9RciMsBZfhlMa9jGZF/Lp1jZneG/WFCVX3KwgZlnltHTk0s4A==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-08-20T11:52:11Z"
-    mac: ENC[AES256_GCM,data:3nAZxg9GNTd9bSV929i2GlR5zFIFLCyCWNzhynyde0VSB0xkGwQqiD2XI3vDz+SG0ePtMg9KuKsu8KxOE1SnNvneOQTq5PExIfYAGtE9HpmS7tLZJOpmez/1fLhlwqK05RqaLZBetHjHFcnLyOWEQ3HbT6o9ziUnjZGNdWeKS7w=,iv:r7iR33cEv391nTCrbTdJArKdwLQnEIbkWkJhp6GpMXU=,tag:63B4hgP7xVXNjtzPNfIZ4w==,type:str]
+    lastmodified: "2022-08-20T11:57:59Z"
+    mac: ENC[AES256_GCM,data:4uq4Szvi6nHTZm2Dl8+T7kDwstmoLOk2GxlXn/S5OozYpDBWP4PnKVXXjAEVD7t0To9PgJn3sUfNJbd5dWnm05Wa23GAqZdQnRj8t1yms0IVGwib8N1bz9IC1YtbgalEU55+3iUfgP0OhGN1/cULQAWkmKTaXIMuWbUa0JoIuJg=,iv:qe6odPwdKcPFIDf42dTjXDjsvgSAiIyP/nc8Zs20+dg=,tag:GyCdl64LoTpI9vGYK4AAxw==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.1
