--- a/cluster/apps/argocd/argocd/helm-release.yaml
+++ b/cluster/apps/argocd/argocd/helm-release.yaml
@@ -728,6 +728,7 @@ spec:
       # -- [General Argo CD configuration]
       # @default -- See [values.yaml]
       config:
+        kustomize.buildOptions: "--enable-alpha-plugins"
         # Argo CD's externally facing base URL (optional). Required when configuring SSO
         url: ""
         # Argo CD instance label key
@@ -929,6 +930,38 @@ spec:
         # -- Image pull policy for the repo server
         # @default -- `""` (defaults to global.image.imagePullPolicy)
         imagePullPolicy: "" # IfNotPresent
+
+      ##### KSOPS CONFIGURATION #####
+      # Set the XDG_CONFIG_HOME env variable to allow kustomize to detect the plugin
+      env:
+        - name: XDG_CONFIG_HOME
+          value: /.config
+      # Use init containers to configure custom tooling
+      # https://argoproj.github.io/argo-cd/operator-manual/custom_tools/
+      volumes:
+        - name: custom-tools
+          emptyDir: {}
+      initContainers:
+        - name: install-ksops
+          image: viaductoss/ksops:v3.0.2
+          command: ["/bin/sh", "-c"]
+          args:
+            - echo "Installing KSOPS...";
+              mv ksops /custom-tools/;
+              mv $GOPATH/bin/kustomize /custom-tools/;
+              echo "Done.";
+          volumeMounts:
+            - mountPath: /custom-tools
+              name: custom-tools
+      volumeMounts:
+        - mountPath: /usr/local/bin/kustomize
+          name: custom-tools
+          subPath: kustomize
+          # Verify this matches a XDG_CONFIG_HOME=/.config env variable
+        - mountPath: /.config/kustomize/plugin/viaduct.ai/v1/ksops/ksops
+          name: custom-tools
+          subPath: ksops          
+      ##############################
       # -- Repo server log format: Either `text` or `json`
       logFormat: text
       # -- Repo server log level
