--- a/cluster/apps/argocd/argocd/helm-release.yaml
+++ b/cluster/apps/argocd/argocd/helm-release.yaml
@@ -934,6 +934,8 @@ spec:
       ##### KSOPS CONFIGURATION #####
       # Set the XDG_CONFIG_HOME env variable to allow kustomize to detect the plugin
       env:
+        - name: GNUPGHOME
+          value: /home/argocd/.gnupg
         - name: XDG_CONFIG_HOME
           value: /.config
       # Use init containers to configure custom tooling
@@ -941,7 +943,24 @@ spec:
       volumes:
         - name: custom-tools
           emptyDir: {}
+        - name: gnupg-home
+          emptyDir: {}
+        - name: deploy-gpg-key
+          secret:
+            secretName: sops-gpg
       initContainers:
+        - name: import-gpg-key
+          image: argoproj/argocd:v2.4.8
+          command: ["gpg", "--import", "/deploy-gpg-key/sops.asc"]
+          env:
+            - name: GNUPGHOME
+              value: /gnupg-home/.gnupg
+          volumeMounts:
+            - mountPath: /deploy-gpg-key
+              name: deploy-gpg-key
+              readOnly: true
+            - mountPath: /gnupg-home
+              name: gnupg-home      
         - name: install-ksops
           image: viaductoss/ksops:v3.0.2-arm64
           command: ["/bin/sh", "-c"]
@@ -954,6 +973,9 @@ spec:
             - mountPath: /custom-tools
               name: custom-tools
       volumeMounts:
+        - mountPath: /home/argocd/.gnupg
+          name: gnupg-home
+          subPath: .gnupg
         - mountPath: /usr/local/bin/kustomize
           name: custom-tools
           subPath: kustomize
@@ -1073,6 +1095,15 @@ spec:
         annotations: {}
         # -- Automount API credentials for the Service Account
         automountServiceAccountToken: true
+
+        # rbac permssions
+        rbac:
+        - apiGroups:
+          - ""
+          resources:
+          - secrets
+          verbs:
+          - get
       # Init container to copy argocd binary
       copyutil:
         # -- Resource limits and requests for the copyutil initContainer
