--- a/cluster/apps/argocd/argocd/helm-release.yaml
+++ b/cluster/apps/argocd/argocd/helm-release.yaml
@@ -934,57 +934,57 @@ spec:
       ##### KSOPS CONFIGURATION #####
       # Set the XDG_CONFIG_HOME env variable to allow kustomize to detect the plugin
       env:
-        # - name: GNUPGHOME
-        #   value: /home/argocd/.gnupg
-        - name: XDG_CONFIG_HOME
-          value: /.config
+        - name: GNUPGHOME
+          value: /home/argocd/.gnupg
+        # - name: XDG_CONFIG_HOME
+        #   value: /.config
       # Use init containers to configure custom tooling
       # https://argoproj.github.io/argo-cd/operator-manual/custom_tools/
       volumes:
-        - name: custom-tools
-          emptyDir: {}
-        # - name: gnupg-home
+        # - name: custom-tools
         #   emptyDir: {}
-        - name: gpg-private-key
+        - name: gnupg-home
+          emptyDir: {}
+        - name: deploy-gpg-key
           secret:
             secretName: sops-gpg
       initContainers:
-        # - name: import-gpg-key
-        #   image: argoproj/argocd:v2.4.8
-        #   command: ["gpg", "--import", "/deploy-gpg-key/sops.asc"]
-        #   env:
-        #     - name: GNUPGHOME
-        #       value: /gnupg-home/.gnupg
-        #   volumeMounts:
-        #     - mountPath: /deploy-gpg-key
-        #       name: deploy-gpg-key
-        #       readOnly: true
-        #     - mountPath: /gnupg-home
-        #       name: gnupg-home      
-        - name: install-ksops
-          image: viaductoss/ksops:v3.0.2-arm64
-          command: ["/bin/sh", "-c"]
-          args:
-            - echo "Installing KSOPS...";
-              mv ksops /custom-tools/;
-              mv $GOPATH/bin/kustomize /custom-tools/;
-              echo "Done.";
+        - name: import-gpg-key
+          image: argoproj/argocd:v2.4.8
+          command: ["gpg", "--import", "/deploy-gpg-key/sops.asc"]
+          env:
+            - name: GNUPGHOME
+              value: /gnupg-home/.gnupg
           volumeMounts:
-            - mountPath: /custom-tools
-              name: custom-tools
+            - mountPath: /deploy-gpg-key
+              name: deploy-gpg-key
+              readOnly: true
+            - mountPath: /gnupg-home
+              name: gnupg-home      
+        # - name: install-ksops
+        #   image: viaductoss/ksops:v3.0.2-arm64
+        #   command: ["/bin/sh", "-c"]
+        #   args:
+        #     - echo "Installing KSOPS...";
+        #       mv ksops /custom-tools/;
+        #       mv $GOPATH/bin/kustomize /custom-tools/;
+        #       echo "Done.";
+        #   volumeMounts:
+        #     - mountPath: /custom-tools
+        #       name: custom-tools
       volumeMounts:
-        # - mountPath: /home/argocd/.gnupg
-        #   name: gnupg-home
-        #   subPath: .gnupg
-        - name: gpg-private-key
-          mountPath: /app/config/gpg
-        - mountPath: /usr/local/bin/kustomize
-          name: custom-tools
-          subPath: kustomize
-          # Verify this matches a XDG_CONFIG_HOME=/.config env variable
-        - mountPath: /.config/kustomize/plugin/viaduct.ai/v1/ksops/ksops
-          name: custom-tools
-          subPath: ksops          
+        - mountPath: /home/argocd/.gnupg
+          name: gnupg-home
+          subPath: .gnupg
+        # - name: gpg-private-key
+        #   mountPath: /app/config/gpg
+        # - mountPath: /usr/local/bin/kustomize
+        #   name: custom-tools
+        #   subPath: kustomize
+        #   # Verify this matches a XDG_CONFIG_HOME=/.config env variable
+        # - mountPath: /.config/kustomize/plugin/viaduct.ai/v1/ksops/ksops
+        #   name: custom-tools
+        #   subPath: ksops          
       ##############################
       # -- Repo server log format: Either `text` or `json`
       logFormat: text
