Enable ksops for argocd

--- a/cluster/apps/argocd/argocd/helm-release.yaml
+++ b/cluster/apps/argocd/argocd/helm-release.yaml
@@ -936,13 +936,13 @@ spec:
       env:
         - name: GNUPGHOME
           value: /home/argocd/.gnupg
-        # - name: XDG_CONFIG_HOME
-        #   value: /.config
+        - name: XDG_CONFIG_HOME
+          value: /.config
       # Use init containers to configure custom tooling
       # https://argoproj.github.io/argo-cd/operator-manual/custom_tools/
       volumes:
-        # - name: custom-tools
-        #   emptyDir: {}
+        - name: custom-tools
+          emptyDir: {}
         - name: gnupg-home
           emptyDir: {}
         - name: deploy-gpg-key
@@ -961,30 +961,30 @@ spec:
               readOnly: true
             - mountPath: /gnupg-home
               name: gnupg-home      
-        # - name: install-ksops
-        #   image: viaductoss/ksops:v3.0.2-arm64
-        #   command: ["/bin/sh", "-c"]
-        #   args:
-        #     - echo "Installing KSOPS...";
-        #       mv ksops /custom-tools/;
-        #       mv $GOPATH/bin/kustomize /custom-tools/;
-        #       echo "Done.";
-        #   volumeMounts:
-        #     - mountPath: /custom-tools
-        #       name: custom-tools
+        - name: install-ksops
+          image: viaductoss/ksops:v3.0.2-arm64
+          command: ["/bin/sh", "-c"]
+          args:
+            - echo "Installing KSOPS...";
+              mv ksops /custom-tools/;
+              mv $GOPATH/bin/kustomize /custom-tools/;
+              echo "Done.";
+          volumeMounts:
+            - mountPath: /custom-tools
+              name: custom-tools
       volumeMounts:
         - mountPath: /home/argocd/.gnupg
           name: gnupg-home
           subPath: .gnupg
         # - name: gpg-private-key
         #   mountPath: /app/config/gpg
-        # - mountPath: /usr/local/bin/kustomize
-        #   name: custom-tools
-        #   subPath: kustomize
-        #   # Verify this matches a XDG_CONFIG_HOME=/.config env variable
-        # - mountPath: /.config/kustomize/plugin/viaduct.ai/v1/ksops/ksops
-        #   name: custom-tools
-        #   subPath: ksops          
+        - mountPath: /usr/local/bin/kustomize
+          name: custom-tools
+          subPath: kustomize
+          # Verify this matches a XDG_CONFIG_HOME=/.config env variable
+        - mountPath: /.config/kustomize/plugin/viaduct.ai/v1/ksops/ksops
+          name: custom-tools
+          subPath: ksops          
       ##############################
       # -- Repo server log format: Either `text` or `json`
       logFormat: text
