--- a/cluster/base/flux-system/charts/helm/kustomization.yaml
+++ b/cluster/base/flux-system/charts/helm/kustomization.yaml
@@ -7,6 +7,7 @@ resources:
   - deliveryhero-charts.yaml
   - descheduler-charts.yaml
   - external-dns-charts.yaml
+  - firefly-iii-charts.yaml
   - grafana-charts.yaml
   - hajimari-charts.yaml
   - infracloudio-charts.yaml
