--- a/cluster/base/flux-system/kustomization.yaml
+++ b/cluster/base/flux-system/kustomization.yaml
@@ -18,3 +18,4 @@ resources:
   - ./charts/helm/grafana-charts.yaml
   - ./charts/helm/bitnami-charts.yaml
   - ./charts/helm/k8s-at-home-charts.yaml
+  - ./charts/helm/firefly-iii-charts.yaml
