Update ENV configs

--- a/cluster/apps/default/firefly-iii/firefly-iii-secrets.sops.yaml
+++ b/cluster/apps/default/firefly-iii/firefly-iii-secrets.sops.yaml
@@ -4,11 +4,20 @@ metadata:
     name: firefly-iii-secrets
     namespace: default
 stringData:
-    DB_PASSWORD: ENC[AES256_GCM,data:7P3zNfGfqNGReDaAgUkeYSKQQKdNwJU4eZ1v7tc/v9g=,iv:lQY3IeCohkgBDiMf9TY//nQYv6Wp1+voV/I9mpkBE/8=,tag:ndO5oQSpzyWEB0RhkaVibg==,type:str]
-    POSTGRES_PASSWORD: ENC[AES256_GCM,data:e7LUBO+gS20Clj2DP5i6P1Qg+HERJvQk0KptHBkjP9w=,iv:4lW3KFR+keXl7OsKOe3LqR85Qe5b0KgzePK06meRruo=,tag:UbxzvaokNtRBWUk9Q+BzLg==,type:str]
-    PGPASSWORD: ENC[AES256_GCM,data:LFHMI5ryxEFw94CX+HK2NwYNnAP0kj4K073c/XZXjt4=,iv:8pva5ZBSrN5WXbzWSIW3dRKOAcJ6JJjPLUWtlzl6CJ4=,tag:QN2zqcJK1Ql+62kDodpsGg==,type:str]
-    APP_KEY: ENC[AES256_GCM,data:P2/qOjks+TAXRT0vTYurL/gFV8Tzuy60L8Nmq/PirPg=,iv:Lxmf56f96hM1c0IBrjeseOVY/WQ6HkNGBmXfEGYj6QM=,tag:ZNAWvnWU1ikjnV1fHmMpLw==,type:str]
-    SITE_OWNER: ENC[AES256_GCM,data:GnbiPI0fNFW3uw+OUcjvApa8FNmwZA1ZIup8XKU=,iv:NOX1s7bsMKUqZobsE0yMIvX+OHFvPIlSShkuM9j1cuA=,tag:zMNb7QyjyVLf+HO6Bs8ECQ==,type:str]
+    DB_PASSWORD: ENC[AES256_GCM,data:1SXZ86RCaGqBO4wWhBgd4bivLIuR4tDUhtbHmHBYqhE=,iv:4XfAmOoIbdAS4eFlMSufmXYh1LXxVcxRYl/FbRS45fI=,tag:g+5KHiL4ri8djuqFOEJOMw==,type:str]
+    POSTGRES_PASSWORD: ENC[AES256_GCM,data:toAnHTgwkI/iuofjfLFb+uNVxXmG64ZMgcymK22OBkw=,iv:8x8bH1BuX5y9/ni9cDHTLzX9i2debr4vjJu4iYDmW38=,tag:iJqdHdo5vpW0JYrYU/KlzA==,type:str]
+    PGPASSWORD: ENC[AES256_GCM,data:EgXh8/h1cnd0EmE1R7y7z6g4MvCyuD9mU7dLXjdgh6s=,iv:9WaMUFVfbVrJ1bFtI1OQL9yDnPb/CgJ+b/b+CznbsMc=,tag:onhg6LX0ojhBS6vw4XNTiw==,type:str]
+    APP_KEY: ENC[AES256_GCM,data:l7xXd2QHCruOHqGxZTs8NS/9JH8cOerAWj+FTGyZBtE=,iv:XqURND1ScHQ5WCmiUIvf4LDtme5+cZmaz8wrqarlrP4=,tag:VLdB22jtNKwJTbTQTDN8lQ==,type:str]
+    SITE_OWNER: ENC[AES256_GCM,data:9KR+CrggAIdSRKeMbFEbV4uUicZU0bOfmHdI6XQ=,iv:o4BKLWZ1SrMSBSdMgNrOEnBh1rba26N3hhmUrYO7QXs=,tag:oTlvz0QgwYNina5OXgID6Q==,type:str]
+    RESTORE_URL: ""
+    BACKUP_URL: ""
+    DBHOST: ENC[AES256_GCM,data:S1bxfEayHDkQBo19/QBLlS2b,iv:w8FtLnz12C+cUony7OVCO7MuHQPgE71BekH3eSJdA9k=,tag:A5Rsl5cMUh2gdUUHe2jHSg==,type:str]
+    DBPORT: ENC[AES256_GCM,data:KIm6yg==,iv:IAK+uJLtWRdh7OIAAUufiMmXjcz2LYzMzuvmbBrr3LE=,tag:ebTN5E4THn6vGurebn3eBw==,type:str]
+    DBNAME: ENC[AES256_GCM,data:j81U1xF/jg==,iv:cYJi0pnL3fX2ybBhwlw3B/qXIRHzJioGZKHFE8p50dY=,tag:X0vJMWT42OlrwofUmT8GfQ==,type:str]
+    DBUSER: ENC[AES256_GCM,data:rj1uAKCyRQ==,iv:Mzer7fxmV189mg5LT38jtjW8ZKB5HvLX/e7ozUqe9OE=,tag:59mOJdp9iCIS6ti0Qlp79w==,type:str]
+    TZ: ENC[AES256_GCM,data:jOU2gFkmyL8XItD8lA==,iv:KuAcpVUM0x1SdWUAszyi3C70a+Hsiud1PoXW6eeawIc=,tag:de9mvA+XoXwm+lOnBBQ+sA==,type:str]
+    POSTGRES_HOST_AUTH_METHOD: ENC[AES256_GCM,data:dqliQLs=,iv:LLaq+BJjmqTXzVK8Jiyq44I4N5VQEwXRIlwZimChF40=,tag:Hps6uwBdKDaQjcKu6m54NQ==,type:str]
+    POSTGRES_USER: ENC[AES256_GCM,data:OPZMFIdRCQ==,iv:s4G7Ia3mFefU8souTxcbLPy5CPA+TdF6oNWZ5FNOcvo=,tag:gVIXtc7C86hbyXtx8PumNA==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -18,14 +27,14 @@ sops:
         - recipient: age1hra9lsurxkx96y9vgckl38ct3x4nkq655nnmfpe2xly93kqypqps0yhwmc
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA0RVBvdnEySkU4ZjV3Tng1
-            TEVTT3hxUG5IOVorV1h3RjdESnJGT1NWRUI0Cm1ia0ZCZ0RNb3JOcGhzKy9hdnhs
-            VDg3MTN1MWhWaWplSnVUVWtwWHh6WW8KLS0tIEkyZVl5SVRBRzZ0VjNxTzd0UTZR
-            TzJIY082YlUwd09kS2ZkTXpMZWtQdWMKtpFSQfqpy+AAK0Dl9jn0LuPd5gHXB8d2
-            aiDep2kI2wF7zCwIeUJpzfcnGjm/8bgShAX3qVIylDy7PKMkGi70oQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA2cFZoWm1YenAwU2FPRkIy
+            RmV0Rkl2V3djTUM1d0YwdFNNTjJMMkNhMmw4CnB6TWFPRGZQNktLUTVsbnBKLzRi
+            SGN4YVFSc1Bnb0g2RVVaby9oRlNlVVkKLS0tIGFGb0tObkxrYlE2OHJMb090SHRR
+            Vnc5SUtHREhGU3AvSGluNXR4cFh1TFkKfFuobUuXSHYgV/Q74mxCPucnhjDgn9dk
+            T0c1+1E+0LMY6FsbzPJt3TZlBpMMozp5u6X7YMHUFb+gAhee4PYS4g==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-09-19T11:02:06Z"
-    mac: ENC[AES256_GCM,data:Nf27n0N1Tq06u6czEtJ0h8ifWzfd5jEsqi3i2fxJvIHMQ0SBFHIaLj/3kFVzZh1ZuK7QE2t1B35WMwNZkivEZE/7fBwMIZXQYdBhdOx7UMOlBSdOmAHTEAUH6lXhNve4pKvnej41aUDTh37+hwqakv33oMsl91hfAnWDUIQhqt0=,iv:qbHg5YSzhCds2ja5p6GuWbBKkwPhLZF0dNCiBxNath8=,tag:L/SXjeecCvL68abUS80ITA==,type:str]
+    lastmodified: "2022-09-19T12:45:40Z"
+    mac: ENC[AES256_GCM,data:WP0J2ffscLZOSqYv41KBOxNDXvt6j5xQ4mJDKCEQUWOgD21x+shVC7iL1qRxBz8nGFJWnzfvFOKzhR7AeSHzkWTcz67f3QcwuxPpBdXcUgRpMLRVKW3lBqy2HSo/wGUaQiX8SadiKpQpp9V2CoMMZubn79QFyLiBvLWPjxwzXD4=,iv:+sFf9ySvhBuley6+tnfqBPgbirsFPBatoTd1J5/74ug=,tag:fn/S0LN4P9teFpoaqKUe+A==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.1
