Fix copy and paste mistake

--- a/cluster/apps/pihole/pihole/pihole-secrets.sops.yaml
+++ b/cluster/apps/pihole/pihole/pihole-secrets.sops.yaml
@@ -2,8 +2,8 @@
 apiVersion: v1
 kind: Secret
 metadata:
-    name: monitoring-secrets
-    namespace: monitoring
+    name: pihole-secrets
+    namespace: pihole
 stringData:
     ADMIN_PASSWORD: ENC[AES256_GCM,data:jVb0EWiN2kpt9jPylbXHYyAKQk7vGgjbolKzx/pE5GY=,iv:6rRwGeSseW1b9priNDOY7/giZhcSAuouo2iOoIyXjBU=,tag:JatEr7MpmUpZLiOTJw35kw==,type:str]
     SECRET_DOMAIN: ENC[AES256_GCM,data:FeI8osHYZg==,iv:AIoSrtoVNUWjfOwhH+ErBw0K/w0qMFnQQcOuc4k6pS0=,tag:8xdU/U/+vmjUF1ilhBNBEA==,type:str]
