--- a/cluster/apps/pihole/pihole/helm-release.yaml
+++ b/cluster/apps/pihole/pihole/helm-release.yaml
@@ -279,8 +279,11 @@ spec:
     serviceDns:
       type: LoadBalancer
       annotations:
-        metallb.universe.tf/allow-shared-ip: default
-      loadBalancerIP: 192.168.178.201
+        metallb.universe.tf/address-pool: default
+        metallb.universe.tf/allow-shared-ip: "serviceDns"
+        metallb.universe.tf/loadBalancerIPs: "192.168.178.201"
+      #loadBalancerIP: 192.168.178.201
+    privileged: true
     dnsmasq:
       customDnsEntries:
         - address=/nas.${SECRET_DOMAIN}/192.168.178.201
