--- a/cluster/apps/pihole/pihole/helm-release.yaml
+++ b/cluster/apps/pihole/pihole/helm-release.yaml
@@ -32,7 +32,6 @@ spec:
     extraEnvVars:
       WEBTHEME: default-dark
       WEBUIBOXEDLAYOUT: boxed
-      FTLCONF_REPLY_ADDR4: 192.168.178.201
       REV_SERVER: true
       REV_SERVER_TARGET: 192.168.178.1
       REV_SERVER_DOMAIN: "${SECRET_DOMAIN}"
@@ -281,8 +280,7 @@ spec:
       annotations:
         metallb.universe.tf/address-pool: default
         metallb.universe.tf/allow-shared-ip: "serviceDns"
-        metallb.universe.tf/loadBalancerIPs: "192.168.178.201"
-      #loadBalancerIP: 192.168.178.201
+      loadBalancerIP: 192.168.178.202
     privileged: true
     dnsmasq:
       customDnsEntries:
