--- a/cluster/apps/pihole/pihole/helm-release.yaml
+++ b/cluster/apps/pihole/pihole/helm-release.yaml
@@ -44,6 +44,8 @@ spec:
       DNS_BOGUS_PRIV: true
       DNS_FQDN_REQUIRED: true
       DNSSEC: false
+    ftl:
+      MAXDBDAYS: 14      
     adlists:
       - https://raw.githubusercontent.com/PolishFiltersTeam/KADhosts/master/KADhosts.txt
       - https://raw.githubusercontent.com/FadeMind/hosts.extras/master/add.Spam/hosts
