--- a/cluster/apps/pihole/pihole/helm-release.yaml
+++ b/cluster/apps/pihole/pihole/helm-release.yaml
@@ -37,7 +37,7 @@ spec:
       FTLCONF_LOCAL_IPV4: 192.168.178.202
       REV_SERVER: true
       REV_SERVER_TARGET: 192.168.178.1
-      REV_SERVER_DOMAIN: "${SECRET_DOMAIN}"
+      REV_SERVER_DOMAIN: fritz.box
       REV_SERVER_CIDR: 192.168.178.0/24
       DNSMASQ_LISTENING: all
       DNS_BOGUS_PRIV: true
